Added packet checksums for all packets Packets between host and camera_pi use CRC32 Packets involving MCUs use a simple checksum (Fletcher-32) - All MCUs have hardware CRCs in theory, but the CH32s is non-configurable   - Could not reproduce what exactly it does between 32bit blocks (which I was able to reproduce) - this affects controller <-> camera_pi and controller <-> camera_mcu packets

--- a/camera/CMakeLists.txt
+++ b/camera/CMakeLists.txt
@@ -51,6 +51,8 @@ set(SOURCES
 	../shared/comm/protocol_stream.cpp
 	../shared/blob/refinement.cpp
 	../shared/blob/blob.cpp
+	../shared/hash/crc32.cpp
+	../shared/hash/sha256.cpp
 )
 set(LIBRARIES
 	m dl pthread atomic
