--- a/server/Makefile
+++ b/server/Makefile
@@ -178,7 +178,9 @@ SERVER_CPP = \
 #comm/server.cpp
 
 SERVER_SHARED_CPP = \
-	util/image.cpp
+	util/image.cpp \
+	hash/crc32.cpp \
+	hash/sha256.cpp
 #comm/protocol_stream.cpp
 SERVER_SHARED_C =
 
