--- a/controller/.vscode/tasks.json
+++ b/controller/.vscode/tasks.json
@@ -13,6 +13,15 @@
 				"Build CH32V307 Flashing Tool"
 			]
 		},
+		{ // Requires https://github.com/ch32-rs/wlink to be installed
+			"label": "Flash & Log CH32V307 with wlink",
+			"type": "shell",
+			"group": "test",
+			"command": "wlink flash --enable-sdi-print --watch-serial build/TrackingController.bin",
+			"dependsOn": [
+				"Build CH32V307 Controller"
+			]
+		},
 		{
 			"label": "Configure CH32V307",
 			"type": "shell",
