--- a/controller/Makefile
+++ b/controller/Makefile
@@ -34,13 +34,15 @@ LOG_FLAGS += -DKERR_LOG
 # Temporary log during debugging
 #LOG_FLAGS += -DTEMP_LOG
 # COMMunication Log - needs WARN_LOG as well
-LOG_FLAGS += -DCOMM_LOG
+#LOG_FLAGS += -DCOMM_LOG
 # Command Debug Log
-LOG_FLAGS += -DCMDD_LOG
+#LOG_FLAGS += -DCMDD_LOG
 # USB Driver Debug Log
 #LOG_FLAGS += -DUSBD_LOG
 # USB Class Debug Log
 #LOG_FLAGS += -DUSBC_LOG
+# USB Packet Debug Log
+#LOG_FLAGS += -DUSBP_LOG
 # USB PD Debug Log
 #LOG_FLAGS += -DUSBPD_LOG
 #LOG_FLAGS += -DPD_CAPS
