Added UI for flashing controller firmware Alternative to separate isp55e0 tool in controller project Not fully integrated yet, e.g. have to manually enter bootloader and then flash any WinChipHead that appeared But it's functional and easier to use than a separate tool Based on vnproch551 instead of isp55e0 due to both licensing and ease of integration

--- a/server/Makefile
+++ b/server/Makefile
@@ -167,7 +167,7 @@ SERVER_CPP = \
 	comm/usb.cpp comm/protocol_packet.cpp \
 	comm/streaming.cpp comm/timesync.cpp \
 	device/tracking_controller.cpp device/tracking_camera.cpp \
-	device/parsing.cpp device/camera_firmware.cpp \
+	device/parsing.cpp device/camera_firmware.cpp device/controller_firmware.cpp \
 	io/vrpn.cpp io/vrpn_imu.cpp \
 	imu/trackerAsterTrack.cpp imu/trackerSlimeVR.cpp imu/remoteIMU.cpp \
 	pipeline/pipeline.cpp pipeline/pipeline_tracking.cpp \
