--- a/server/.vscode/tasks.json
+++ b/server/.vscode/tasks.json
@@ -34,6 +34,21 @@
             ],
             "runOptions": { "reevaluateOnRerun": false }
         },
+       /*  { // DO NOT USE: Doesn't build dependencies using debian environment, so any compatibility benefits may be void
+            "label": "Build using Debian Environment",
+            "type": "shell",
+            "group": "build",
+            "command": "sudo",
+            "args": [ "./env_debian_ext.sh", "debian-external", "&&", "make", "SYS_ROOT=debian-external", "COMPILER=clang-std", "BUILD_TYPE=${input:linuxBuildType}", "-j", "$(nproc", "--ignore=2)" ],
+        }, */
+        {
+            "label": "Build inside Debian Environment",
+            "type": "shell",
+            "group": "build",
+            "command": "sudo",
+            "args": [ "./env_debian_int.sh", "debian-internal", "release" ],
+            // Currently, no verify or debug modes are supported due to the options of the clang custom build (bit tricky)
+        },
         {
             "label": "Run AsterTrack",
             "type": "shell",
@@ -145,9 +160,9 @@
         { // On Linux, allow selection of compiler
             "id": "compiler",
             "description": "Compiler:",
-            "default": "clang-gnu",
+            "default": "clang-std",
             "type": "pickString",
-            "options": [ "clang-libc", "clang-gnu", "gcc" ]
+            "options": [ "clang-libc", "clang-std", "gcc" ]
         },
         { // On Linux, allow dependencies to be build with sanitized option on. Release/Debug not needed, all "release"
             "id": "sanitizedOption",
