Minor UI improvements aligned with documentation update

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -41,7 +41,7 @@ set(INTERFACE
 	ui/insights.cpp ui/logging.cpp
 	ui/devices.cpp ui/wireless.cpp ui/cameraSettings.cpp
 	ui/parameters/sequence2D.cpp ui/parameters/calibration_point.cpp ui/parameters/calibration_target.cpp ui/parameters/tracking.cpp
-	ui/targets.cpp
+	ui/trackers.cpp
 	ui/tools/lens_selection.cpp
 	ui/cameraPanels.cpp ui/cameraView.cpp ui/view3D.cpp ui/visSettings.cpp
 	ui/system/state.cpp ui/system/visGeneral.cpp ui/system/visTarget.cpp
