Fixed and improved OpenMP support for tracking and detection Added parallel tracking of targets using OpenMP Added max thread parameters to both detection and tracking
Fixed broken OpenMP implementation in clang-std build:
- Used GNU OpenMP before, seems to be broken now, will only use 1 thread
- Switched to Clang OpenMP, which had problems before I think

--- a/server/.vscode/tasks.json
+++ b/server/.vscode/tasks.json
@@ -162,7 +162,7 @@
             "description": "Compiler:",
             "default": "clang-std",
             "type": "pickString",
-            "options": [ "clang-libc", "clang-std", "gcc" ]
+            "options": [ "clang-libc", "clang-std", "gcc (do not use; too slow)" ]
         },
         { // On Linux, allow dependencies to be build with sanitized option on. Release/Debug not needed, all "release"
             "id": "sanitizedOption",
