Added support for custom camera drivers with build system Build system for kernel drivers and loading them ontop of system drivers - Opens up the ability to improve/fix the kernel driver and add support for new sensors - Requires downloading kernel sources to storage partition, so needs wifi-enabled image to compile Replaced new OV9282 driver with custom patched version - Due to an unresolved issue it always used non-continuous MIPI clocks - That resulted in severely limited shutter speeds at high framerates Added storage partition for persistent data storage - Needed for unpacked kernel source - Useful for future footage cache/storage - Can persist between flashes as partition is at fixed location - Should move config to that partition in the future    - needs to be copied from TCE, as storage is not available on setup - Allows for future OS updates by merely writing a new image to disk    - that will require unmounting TCE partition though, which might require some work

--- a/camera/.gitignore
+++ b/camera/.gitignore
@@ -7,8 +7,10 @@ compile_commands.json
 build/
 
 # Setup scripts
-setup/storage
-setup/data
-setup/download
 setup/*.img
+setup/data
+setup/storage
+setup/download
+setup/storage_*
+setup/download_*
 setup/search_repo_*
