Implemented initial Power Control using ADCs
Added ADC support for External and USB PD inputs
- ADC runs above spec, using 18Mhz instead of 14Mhz, see code
- Both values are continually checked every 3.7us without any CPU/DMA involvement
- Might want to only enable power/ADCs when connected to host in the future
Automatically enable power inputs when in valid range
- Might want user configuration in the future
Added watchdog for enabled power input to disable when out of valid range
- Might want finer control e.g. +-1V of expected voltage instead of full range

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -46,6 +46,10 @@ LOG_FLAGS += -DCOMM_LOG
 # USB PD Debug Log
 #LOG_FLAGS += -DUSBPD_LOG
 #LOG_FLAGS += -DPD_CAPS
+# Power Control Logs
+LOG_FLAGS += -DPOW_LOG
+# ADC Voltage Logs
+LOG_FLAGS += -DADC_LOG
 # UART Hardware Debug Log
 #LOG_FLAGS += -DUART_LOG
 # UART Hardware Debug Traces
@@ -72,6 +76,7 @@ source/config.c \
 source/usb_driver.c \
 source/uart_driver.c \
 source/pd_driver.c \
+source/power_control.c \
 dependencies/PDlib/source/fusb302b.c \
 dependencies/PDlib/source/policy_engine_states.c \
 dependencies/PDlib/source/policy_engine.c \
